styling and gulp

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
               </div>
             </div>
           </nav>
-		<br><br>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
+    <br><br>
+    <div class="mainpagepics">
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 	</body>
 </html>
