--- a/team.html
+++ b/team.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<title>Kalpakkam Bengali Assosciation</title>
+		<title>Kalpakkam Bengali Assosciation - Team</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 		<script type="text/javascript" src="./assets/js/jquery-1.11.3.min.js"></script>
@@ -48,25 +48,10 @@
           </nav>
     <br><br>
     <div class="mainpagepics">
-      <div class="flexitem">
-        <img src="./assets/img/index/1.jpg">
-      </div>
-      <div class="flexitem">
-        <img src="./assets/img/index/2.jpg">
-      </div>
-      <div class="flexitem">
-        <img src="./assets/img/index/3.jpg">
-      </div>
-      <div class="flexitem">
-        <img src="./assets/img/index/4.jpg">
-      </div>
-      <div class="flexitem">
-        <img src="./assets/img/index/5.jpg">
-      </div>
-      <div class="flexitem">
-        <img src="./assets/img/index/6.jpg">
+      <div class="flexitemteam">
+        <img src="./assets/img/team/1.jpg">
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
-	</body>
+  </body>
 </html>
