--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                  <img class="img-responsive" src="./assets/images/logo.png">
+                  <img class="img-responsive" src="./assets/img/logo.png">
               </div>
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav pull-right">
