--- a/events.html
+++ b/events.html
@@ -52,6 +52,37 @@
         <img src="./assets/img/events/1.jpg">
       </div>
     </div>
+    <br><br>
+    <br><br>
+    <div>
+      <div class="eventscontainer">
+        <div class="flexitemevents">
+          <img src="./assets/img/events/2.jpg">
+        </div>
+        <div class="flexitemevents">
+          <img src="./assets/img/events/3.jpg">
+        </div>
+        <div class="flexitemevents">
+          <img src="./assets/img/events/4.jpg">
+        </div>
+      </div>
+      <div class="eventscontainer">
+        <div class="flexitemevents">
+          <img src="./assets/img/events/5.jpg">
+        </div>
+        <div class="flexitemevents">
+          <img src="./assets/img/events/6.jpg">
+        </div>
+        <div class="flexitemevents">
+          <img src="./assets/img/events/7.jpg">
+        </div>
+      </div>
+      <div class="eventscontainer">
+        <div class="flexitemevents">
+          <img src="./assets/img/events/8.jpg">
+        </div>
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
