image resize and individual event pages

--- a/events_html/mike.html
+++ b/events_html/mike.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<title>Kalpakkam Bengali Assosciation - Events</title>
+		<title>Mike</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-		<script type="text/javascript" src="./assets/js/jquery-1.11.3.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+		<script type="text/javascript" src="../assets/js/jquery-1.11.3.min.js"></script>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	</head>
 	<body>
@@ -48,54 +48,11 @@
     <br><br>
     <div class="mainpagepics">
       <div class="flexitemteam">
-      <img src="./assets/img/events/1.jpg">
+        <img src="../assets/img/events/3.jpg">
       </div>
     </div>
     <br><br>
     <br><br>
-    <div>
-      <div class="eventscontainer">
-        <div class="flexitemevents">
-          <a href="events_html/swastik.html">
-            <img src="./assets/img/events/2.jpg">
-          </a>
-        </div>
-        <div class="flexitemevents">
-          <a href="events_html/mike.html">
-            <img src="./assets/img/events/3.jpg">
-          </a>
-        </div>
-        <div class="flexitemevents">
-          <a href="events_html/candle.html">
-            <img src="./assets/img/events/4.jpg">
-          </a>
-        </div>
-      </div>
-      <div class="eventscontainer">
-        <div class="flexitemevents">
-          <a href="events_html/football.html">
-            <img src="./assets/img/events/5.jpg">
-          </a>
-        </div>
-        <div class="flexitemevents">
-          <a href="events_html/cricket.html">
-            <img src="./assets/img/events/6.jpg">
-          </a>
-        </div>
-        <div class="flexitemevents">
-          <a href="events_html/cutlery.html">
-            <img src="./assets/img/events/7.jpg">
-          </a>
-        </div>
-      </div>
-      <div class="eventscontainer">
-        <div class="flexitemevents">
-          <a href="events_html/music.html">
-            <img src="./assets/img/events/8.jpg">
-          </a>
-        </div>
-      </div>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
