fixes width of banner

--- a/events.html
+++ b/events.html
@@ -48,7 +48,7 @@
     <br><br>
     <div class="mainpagepics">
       <div class="flexitemteam">
-      <img src="./assets/img/events/1.jpg">
+      <img class="banner" src="./assets/img/events/1.jpg">
       </div>
     </div>
     <br><br>
