--- a/events_html/music.html
+++ b/events_html/music.html
@@ -48,7 +48,7 @@
     <br><br>
     <div class="mainpagepics">
       <div class="flexitemteam">
-        <img src="../assets/img/events/8.jpg">
+        <img class="banner" src="../assets/img/events/8.jpg">
       </div>
     </div>
     <br><br>
