--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
     <br><br>
     <div class="mainpagepics">
       <div class="flexitemteam">
-        <img src="./assets/img/team/1.jpg">
+        <img class="banner" src="./assets/img/team/1.jpg">
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
