--- a/team.html
+++ b/team.html
@@ -51,6 +51,53 @@
         <img class="banner" src="./assets/img/team/1.jpg">
       </div>
     </div>
+    <br><br>
+    <table class="table table-bordered table-responsive table-hover">
+      <tr>
+        <td>Batayan Secretary</td>
+        <td>Shri Pallab Choudury</td>
+      </tr>
+      <tr>
+        <td>Cultural Secretary</td>
+        <td>Shri Jaideep Chakraborty</td>
+      </tr>
+      <tr>
+        <td>Food Secretary</td>
+        <td>Shri Atanu Pradhan</td>
+      </tr>
+      <tr>
+        <td>Sports Secretary</td>
+        <td>Shri Bapi Sarkar</td>
+      </tr>
+      <tr>
+        <td>Treasurer</td>
+        <td>Shri Barid Baran Lahiri</td>
+      </tr>
+      <tr>
+        <td>Co-Treasurer</td>
+        <td>Smt. Manika Pradhan</td>
+      </tr>
+      <tr>
+        <td>Secretary</td>
+        <td>Shri Anindya Bhattacharyya</td>
+      </tr>
+      <tr>
+        <td>Joint Secretary</td>
+        <td>Smt. Surangama Dhara</td>
+      </tr>
+      <tr>
+        <td>Add. Secretary</td>
+        <td>Smt. Konika Chakravarty</td>
+      </tr>
+      <tr>
+        <td>Vice President</td>
+        <td>Smt. Siuli Maji Gayen</td>
+      </tr>
+      <tr>
+        <td>President</td>
+        <td>Shri Sandip Dhara</td>
+      </tr>
+    </table>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
