--- a/events_html/music.html
+++ b/events_html/music.html
@@ -23,13 +23,13 @@
                 <ul class="nav navbar-nav pull-right">
                   <li><a class="btn btn-active" id="menu-margin-colors" href="#">HOME</a></li>
                   <li class="dropdown">
-                    <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">ABOUT US<span class="caret"></span></a>
-                    <ul class="dropdown-menu"">
+                    <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">COMMITTEE MEMBERS<!-- <span class="caret"></span> --></a>
+                    <!-- <ul class="dropdown-menu"">
                       <li><a href="#">OUR HISTORY</a></li>
                       <li><a href="#">NEWSLETTER</a></li>
                       <li><a href="#">MANAGEMENT COMMITTEE</a></li>
                       <li><a href="#">PRESIDENT's MESSAGE</a></li>
-                    </ul>
+                    </ul> -->
                   </li>
                   <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">EVENTS</a></li>
                   <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">GALLERY</a></li>
