--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <br><br>
-    <table class="table table-bordered table-responsive table-hover">
+    <table class="table-bordered table-responsive table-hover">
       <tr>
         <td>Batayan Secretary</td>
         <td>Shri Pallab Choudury</td>
