--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         <img src="./assets/img/index/2.jpg">
       </div>
     </div>
+    <br><br>
+    <p class="title">
+      WELCOME TO BENGALI CULTURAL ASSOCIATION KALPAKKAM ANUPURAM BHAVINI AND AMMAIPAKKAM
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 	</body>
 </html>
