text over images

--- a/events.html
+++ b/events.html
@@ -49,6 +49,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
       <img class="banner" src="./assets/img/events/1.jpg">
+      <h2><span>উৎসবের পসরা নিয়ে ভিড়িল শেষে তন্দ্রাহরণী</span></h2>
       </div>
     </div>
     <br><br>
