--- a/events_html/mike.html
+++ b/events_html/mike.html
@@ -49,6 +49,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="../assets/img/events/3.jpg">
+        <h2><span>গানে গানে তব বন্ধন যাক টুটে</span></h2>
       </div>
     </div>
     <br><br>
