--- a/team.html
+++ b/team.html
@@ -49,6 +49,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="./assets/img/team/1.jpg">
+        <h2><span>দশে মিলি করি কাজ হারি জিতি নাহি লাজ</span></h2>
       </div>
     </div>
     <br><br>
