--- a/events_html/football.html
+++ b/events_html/football.html
@@ -49,6 +49,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="../assets/img/events/5.jpg">
+        <h2><span>সব খেলার সেরা বাঙালির তুমি ফুটবল</span></h2>
       </div>
     </div>
     <br><br>
