--- a/events_html/music.html
+++ b/events_html/music.html
@@ -49,6 +49,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="../assets/img/events/8.jpg">
+        <h2><span>বিদ্যারূপেণ সংস্থিতা</span></h2>
       </div>
     </div>
     <br><br>
