--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <div class="flexitem">
         <img src="./assets/img/index/5.jpg">
       </div>
+      <h2><span>এই আকাশে আমার মুক্তি আলোয় আলোয়</span></h2>
       <div class="flexitem">
         <img src="./assets/img/index/3.jpg">
       </div>
