--- a/events_html/candle.html
+++ b/events_html/candle.html
@@ -49,6 +49,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="../assets/img/events/4.jpg">
+        <h2><span>আলো আমার আলো ওগো আলো ভুবন ভরা</span></h2>
       </div>
     </div>
     <br><br>
