--- a/events_html/swastik.html
+++ b/events_html/swastik.html
@@ -52,7 +52,15 @@
       </div>
     </div>
     <br><br>
-    <br><br>
+    <h1>Poila Boishakh Celebration</h1>
+    <p>Date: 15 th April 2017
+    <br>
+    Venue: NESCO, Anupuram
+    <br>
+    Time: 19:00 h
+    <br>
+    Cultural programme followed by contributory dinner
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
