fixes menu and typos

--- a/index.html
+++ b/index.html
@@ -22,30 +22,24 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav pull-right">
                   <li><a class="btn btn-active" id="menu-margin-colors" href="#">HOME</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">COMMITTEE MEMBERS<!-- <span class="caret"></span> --></a>
-                    <!-- <ul class="dropdown-menu"">
+                  <li><a class="btn btn-active" id="menu-margin-colors" href="team.html">COMMITTEE MEMBERS</a></li>
+                  <!-- <li class="dropdown">
+                    <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">COMMITTEE MEMBERS<span class="caret"></span></a>
+                    <ul class="dropdown-menu"">
                       <li><a href="#">OUR HISTORY</a></li>
                       <li><a href="#">NEWSLETTER</a></li>
                       <li><a href="#">MANAGEMENT COMMITTEE</a></li>
                       <li><a href="#">PRESIDENT's MESSAGE</a></li>
-                    </ul> -->
-                  </li>
-                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">EVENTS</a></li>
-                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">GALLERY</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">MEMBERSHIP<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#">MEMBERSHIP PLANS</a></li>
-                      <li><a href="#">NEW MEMBER FORM</a></li>
                     </ul>
-                  </li>
-                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">CONTACT US</a></li>
+                  </li> -->
+                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="events.html">EVENTS</a></li>
+                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">GALLERY</a></li>
+                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="contact.html">CONTACT US</a></li>
                 </div>
               </div>
             </div>
           </nav>
-    <br><br>
+    <br>
     <div class="mainpagepics">
       <div class="flexitem">
         <img src="./assets/img/index/1.jpg">
@@ -66,7 +60,7 @@
     </div>
     <br><br>
     <p class="title">
-      WELCOME TO BENGALI CULTURAL ASSOCIATION KALPAKKAM ANUPURAM BHAVINI AND AMMAIPAKKAM
+      WELCOME TO BENGALI CULTURAL ASSOCIATION KALPAKKAM, ANUPURAM, BHAVINI AND AMAIPAKKAM
     </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 	</body>
