--- a/events_html/cricket.html
+++ b/events_html/cricket.html
@@ -10,42 +10,36 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-              </div>
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav pull-right">
-                  <li><a class="btn btn-active" id="menu-margin-colors" href="#">HOME</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">COMMITTEE MEMBERS<!-- <span class="caret"></span> --></a>
-                    <!-- <ul class="dropdown-menu"">
-                      <li><a href="#">OUR HISTORY</a></li>
-                      <li><a href="#">NEWSLETTER</a></li>
-                      <li><a href="#">MANAGEMENT COMMITTEE</a></li>
-                      <li><a href="#">PRESIDENT's MESSAGE</a></li>
-                    </ul> -->
-                  </li>
-                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">EVENTS</a></li>
-                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">GALLERY</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">MEMBERSHIP<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#">MEMBERSHIP PLANS</a></li>
-                      <li><a href="#">NEW MEMBER FORM</a></li>
-                    </ul>
-                  </li>
-                  <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">CONTACT US</a></li>
-                </div>
-              </div>
-            </div>
-          </nav>
-    <br><br>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav pull-right">
+            <li><a class="btn btn-active" id="menu-margin-colors" href="index.html">HOME</a></li>
+            <li><a class="btn btn-active" id="menu-margin-colors" href="team.html">COMMITTEE MEMBERS</a></li>
+            <!-- <li class="dropdown">
+              <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">COMMITTEE MEMBERS<span class="caret"></span></a>
+              <ul class="dropdown-menu"">
+                <li><a href="#">OUR HISTORY</a></li>
+                <li><a href="#">NEWSLETTER</a></li>
+                <li><a href="#">MANAGEMENT COMMITTEE</a></li>
+                <li><a href="#">PRESIDENT's MESSAGE</a></li>
+              </ul>
+            </li> -->
+            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="events.html">EVENTS</a></li>
+            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">GALLERY</a></li>
+            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="contact.html">CONTACT US</a></li>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <br>
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="../assets/img/events/6.jpg">
