all events added

--- a/events_html/cricket.html
+++ b/events_html/cricket.html
@@ -46,7 +46,13 @@
       </div>
     </div>
     <br><br>
-    <br><br>
+    <h1>Cricket</h1>
+    <p>Time: 9 th December 2017 (Saturday)
+    <br>
+      Venue: PRP Ground &amp; Nesco Anupuram
+    <br>
+      Dinner included
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
