--- a/events_html/cutlery.html
+++ b/events_html/cutlery.html
@@ -46,7 +46,13 @@
       </div>
     </div>
     <br><br>
-    <br><br>
+    <h1>Picnic (Christmas Celebration)</h1>
+    <p>Time: 24th December 2017
+    <br>
+      Venue: Further consideration
+    <br>
+      Breakfast, Lunch and dinner included (Separate amount to be collected)
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
