--- a/events_html/football.html
+++ b/events_html/football.html
@@ -47,7 +47,13 @@
       </div>
     </div>
     <br><br>
-    <br><br>
+    <h1>Sports Day &amp; Football</h1>
+    <p>Time: 11th November2017 (Saturday) / 26th November2017 (Sunday)<br>(Date to be chosen depending on arrival of monsoon)
+    <br>
+      Venue: Nesco Ground, Kalpakkam
+    <br>
+      Breakfast and Dinner (Packed Food) included
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
