--- a/events_html/mike.html
+++ b/events_html/mike.html
@@ -47,7 +47,13 @@
       </div>
     </div>
     <br><br>
-    <br><br>
+    <h1>Annual Day</h1>
+    <p>Date: 29 th July 2017 (Saturday)
+    <br>
+      Venue: AECS-1 Ground, Kalpakkam
+    <br>
+      Dinner (Packed food) included
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
