--- a/events_html/music.html
+++ b/events_html/music.html
@@ -47,7 +47,13 @@
       </div>
     </div>
     <br><br>
-    <br><br>
+    <h1>Vasant Panchami (Saraswati Puja), CULTURAL Programme &amp; GB Handover</h1>
+    <p>Time: 22nd January, 2018 (Monday)<br>[Muhurto:07:17-12:32]
+    <br>
+      Venue: Ladies Hostel, Kalpakkam
+    <br>
+      Lunch &amp; Dinner included
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
