--- a/events_html/cricket.html
+++ b/events_html/cricket.html
@@ -43,6 +43,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="../assets/img/events/6.jpg">
+        <h2><span>খেলব লড়ব জিতব রে</span></h2>
       </div>
     </div>
     <br><br>
