--- a/events_html/candle.html
+++ b/events_html/candle.html
@@ -47,7 +47,15 @@
       </div>
     </div>
     <br><br>
-    <br><br>
+    <h1>Deepavali Celebration</h1>
+    <p>Date: 20th October 2017 (Friday)
+    <br>
+    Venue: Nesco, Anupuram
+    <br>
+    Time: 19:00 h
+    <br>
+    Contributory Dinner
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
