--- a/events_html/cutlery.html
+++ b/events_html/cutlery.html
@@ -43,6 +43,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="../assets/img/events/7.jpg">
+        <h2><span>বিরিয়ানি কোর্মা পটলের দোরমা</span></h2>
       </div>
     </div>
     <br><br>
