--- a/events_html/swastik.html
+++ b/events_html/swastik.html
@@ -43,6 +43,7 @@
     <div class="mainpagepics">
       <div class="flexitemteam">
         <img class="banner" src="../assets/img/events/2.jpg">
+        <h2><span>নব আনন্দে জাগো আজি নব রবিকিরণে</span></h2>
       </div>
     </div>
     <br><br>
