--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
       </div>
     </div>
     <br><br>
-    <p class="title">
+    <h1 class="title">
       WELCOME TO BENGALI CULTURAL ASSOCIATION KALPAKKAM, ANUPURAM, BHAVINI AND AMAIPAKKAM
+    </h1>
+    <p class="text">
+        Bengali Cultural Association (BCA) was formed years back to uphold the culture and tradition of Bengalis, who live far away from Bengal at DAE Townships - Kalpakkam, Anupuram, Bhavini and Amaipakkam of Tamil Nadu. Our motto is to keep our culture and tradition alive and transfer the “BANGALIANA” seamlessly to the next generation for establishing their identity congruent to the Bengali custom. Some essence of “BARO MASE TERO PARBON” of Bengal can be experienced through different programmes like Poila Boishakh, Saraswati Puja, Diwali and others which are organised by BCA. BCA is also publishing an annual magazine “BATAYAN” to encourage its members to discover their hidden talent.
     </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 	</body>
