--- a/events_html/mike.html
+++ b/events_html/mike.html
@@ -21,8 +21,8 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav pull-right">
-            <li><a class="btn btn-active" id="menu-margin-colors" href="index.html">HOME</a></li>
-            <li><a class="btn btn-active" id="menu-margin-colors" href="team.html">COMMITTEE MEMBERS</a></li>
+            <li><a class="btn btn-active" id="menu-margin-colors" href="../index.html">HOME</a></li>
+            <li><a class="btn btn-active" id="menu-margin-colors" href="../team.html">COMMITTEE MEMBERS</a></li>
             <!-- <li class="dropdown">
               <a href="#" class="btn dropdown-toggle menu-margin-colors" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="menu-margin-colors">COMMITTEE MEMBERS<span class="caret"></span></a>
               <ul class="dropdown-menu"">
@@ -32,9 +32,9 @@
                 <li><a href="#">PRESIDENT's MESSAGE</a></li>
               </ul>
             </li> -->
-            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="events.html">EVENTS</a></li>
+            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="../events.html">EVENTS</a></li>
             <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">GALLERY</a></li>
-            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="contact.html">CONTACT US</a></li>
+            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="../contact.html">CONTACT US</a></li>
           </div>
         </div>
       </div>
