--- a/events.html
+++ b/events.html
@@ -48,47 +48,7 @@
     <br><br>
     <br><br>
     <div>
-      <div class="eventscontainer">
-        <div class="flexitemevents">
-          <a href="events_html/swastik.html">
-            <img src="./assets/img/events/2.jpg">
-          </a>
-        </div>
-        <div class="flexitemevents">
-          <a href="events_html/mike.html">
-            <img src="./assets/img/events/3.jpg">
-          </a>
-        </div>
-        <div class="flexitemevents">
-          <a href="events_html/candle.html">
-            <img src="./assets/img/events/4.jpg">
-          </a>
-        </div>
-      </div>
-      <div class="eventscontainer">
-        <div class="flexitemevents">
-          <a href="events_html/music.html">
-            <img src="./assets/img/events/8.jpg">
-          </a>
-        </div>
-      </div>
-      <div class="eventscontainer">
-        <div class="flexitemevents">
-          <a href="events_html/football.html">
-            <img src="./assets/img/events/5.jpg">
-          </a>
-        </div>
-        <div class="flexitemevents">
-          <a href="events_html/cricket.html">
-            <img src="./assets/img/events/6.jpg">
-          </a>
-        </div>
-        <div class="flexitemevents">
-          <a href="events_html/cutlery.html">
-            <img src="./assets/img/events/7.jpg">
-          </a>
-        </div>
-      </div>
+      <p>Events will be populated as they are announced</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
