--- a/eventstemp.html
+++ b/eventstemp.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<title>Contact</title>
+		<title>Kalpakkam Bengali Assosciation - Events</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 		<script type="text/javascript" src="./assets/js/jquery-1.11.3.min.js"></script>
@@ -32,8 +32,8 @@
                 <li><a href="#">PRESIDENT's MESSAGE</a></li>
               </ul>
             </li> -->
-            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="events.html">EVENTS</a></li>
-            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">CONTACT US</a></li>
+            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="#">EVENTS</a></li>
+            <li><a class="btn menu-margin-colors" id="menu-margin-colors" href="contact.html">CONTACT US</a></li>
           </div>
         </div>
       </div>
@@ -41,15 +41,55 @@
     <br>
     <div class="mainpagepics">
       <div class="flexitemteam">
-        <img class="banner" src="./assets/img/contact/1.jpg">
-        <h2><span>তুমি ডাক দিয়েছো কোন সকালে</span></h2>
+      <img class="banner" src="./assets/img/events/1.jpg">
+      <h2><span>উৎসবের পসরা নিয়ে ভিড়িল শেষে তন্দ্রাহরণী</span></h2>
       </div>
     </div>
     <br><br>
-    <h1>Contact Details</h1>
-    <p>
-        Email id: bca2018.kpm@gmail.com
-    </p>
+    <br><br>
+    <div>
+      <div class="eventscontainer">
+        <div class="flexitemevents">
+          <a href="events_html/swastik.html">
+            <img src="./assets/img/events/2.jpg">
+          </a>
+        </div>
+        <div class="flexitemevents">
+          <a href="events_html/mike.html">
+            <img src="./assets/img/events/3.jpg">
+          </a>
+        </div>
+        <div class="flexitemevents">
+          <a href="events_html/candle.html">
+            <img src="./assets/img/events/4.jpg">
+          </a>
+        </div>
+      </div>
+      <div class="eventscontainer">
+        <div class="flexitemevents">
+          <a href="events_html/music.html">
+            <img src="./assets/img/events/8.jpg">
+          </a>
+        </div>
+      </div>
+      <div class="eventscontainer">
+        <div class="flexitemevents">
+          <a href="events_html/football.html">
+            <img src="./assets/img/events/5.jpg">
+          </a>
+        </div>
+        <div class="flexitemevents">
+          <a href="events_html/cricket.html">
+            <img src="./assets/img/events/6.jpg">
+          </a>
+        </div>
+        <div class="flexitemevents">
+          <a href="events_html/cutlery.html">
+            <img src="./assets/img/events/7.jpg">
+          </a>
+        </div>
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
