--- a/team.html
+++ b/team.html
@@ -53,11 +53,7 @@
       </tr>
       <tr>
         <td>Cultural Secretary</td>
-        <td>Shri Jaideep Chakraborty</td>
-      </tr>
-      <tr>
-        <td>Food Secretary</td>
-        <td>Shri Atanu Pradhan</td>
+        <td>Smt. Sipra Dutta, Smt. Sonali Mukherjee</td>
       </tr>
       <tr>
         <td>Sports Secretary</td>
@@ -65,31 +61,19 @@
       </tr>
       <tr>
         <td>Treasurer</td>
-        <td>Shri Barid Baran Lahiri</td>
-      </tr>
-      <tr>
-        <td>Co-Treasurer</td>
-        <td>Smt. Manika Pradhan</td>
+        <td>Smt. Sangeetha Jayakumar</td>
       </tr>
       <tr>
         <td>Secretary</td>
-        <td>Shri Anindya Bhattacharyya</td>
-      </tr>
-      <tr>
-        <td>Joint Secretary</td>
-        <td>Smt. Surangama Dhara</td>
-      </tr>
-      <tr>
-        <td>Add. Secretary</td>
-        <td>Smt. Konika Chakravarty</td>
+        <td>Smt. Saswati Sen</td>
       </tr>
       <tr>
         <td>Vice President</td>
-        <td>Smt. Siuli Maji Gayen</td>
+        <td>Smt. Surangama Dhara</td>
       </tr>
       <tr>
         <td>President</td>
-        <td>Shri Sandip Dhara</td>
+        <td>Smt. Siuli Gayen</td>
       </tr>
     </table>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
