Adds the 1st event

--- a/events_html/swastik.html
+++ b/events_html/swastik.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<title>Swastik</title>
+		<title>BARSHOBARON AND ANNUAL DAY</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 		<script type="text/javascript" src="../assets/js/jquery-1.11.3.min.js"></script>
@@ -46,15 +46,17 @@
       </div>
     </div>
     <br><br>
-    <h1>Poila Boishakh Celebration</h1>
-    <p>Date: 15 th April 2017
+    <h1>BARSHOBARON AND ANNUAL DAY</h1>
+    <p>Date: 15 th April (SUNDAY)
     <br>
-    Venue: NESCO, Anupuram
+    Venue: MULTIPURPOSE  HALL
     <br>
+    Dinner Included
+<!--     <br>
     Time: 19:00 h
     <br>
     Cultural programme followed by contributory dinner
-    </p>
+ -->    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   </body>
 </html>
