--- a/events.html
+++ b/events.html
@@ -76,11 +76,11 @@
             <img src="./assets/img/events/5.jpg">
           </a>
         </div>
-        <div class="flexitemevents">
+       <!--  <div class="flexitemevents">
           <a href="events_html/cricket.html">
             <img src="./assets/img/events/6.jpg">
           </a>
-        </div>
+        </div> -->
         <div class="flexitemevents">
           <a href="events_html/cutlery.html">
             <img src="./assets/img/events/7.jpg">
