--- a/events_html/candle.html
+++ b/events_html/candle.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<title>Candle</title>
+		<title>Diwali</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 		<script type="text/javascript" src="../assets/js/jquery-1.11.3.min.js"></script>
@@ -46,12 +46,10 @@
       </div>
     </div>
     <br><br>
-    <h1>Deepavali Celebration</h1>
-    <p>Date: 20th October 2017 (Friday)
+    <h1>Diwali celebration and cricket match</h1>
+    <p>Date: 6th November (Tuesday)
     <br>
-    Venue: Nesco, Anupuram
-    <br>
-    Time: 19:00 h
+    Venue: Anupuram
     <br>
     Contributory Dinner
     </p>
