--- a/events_html/cutlery.html
+++ b/events_html/cutlery.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<title>Cutlery</title>
+		<title>Picnic</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 		<script type="text/javascript" src="../assets/js/jquery-1.11.3.min.js"></script>
@@ -47,7 +47,7 @@
     </div>
     <br><br>
     <h1>Picnic (Christmas Celebration)</h1>
-    <p>Time: 24th December 2017
+    <p>Date: 29th December 2018 (Saturday)
     <br>
       Venue: Further consideration
     <br>
