--- a/events_html/football.html
+++ b/events_html/football.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "UTF-8">
-		<title>Football</title>
+		<title>Sports</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 		<script type="text/javascript" src="../assets/js/jquery-1.11.3.min.js"></script>
@@ -47,7 +47,7 @@
     </div>
     <br><br>
     <h1>Sports Day &amp; Football</h1>
-    <p>Time: 11th November2017 (Saturday) / 26th November2017 (Sunday)<br>(Date to be chosen depending on arrival of monsoon)
+    <p>Date: 12th January2019 (Saturday)
     <br>
       Venue: Nesco Ground, Kalpakkam
     <br>
