--- a/events_html/music.html
+++ b/events_html/music.html
@@ -47,7 +47,7 @@
     </div>
     <br><br>
     <h1>Vasant Panchami (Saraswati Puja), CULTURAL Programme &amp; GB Handover</h1>
-    <p>Time: 22nd January, 2018 (Monday)<br>[Muhurto:07:17-12:32]
+    <p>Date: 10th February 2019
     <br>
       Venue: Ladies Hostel, Kalpakkam
     <br>
