--- a/events_html/cutlery.html
+++ b/events_html/cutlery.html
@@ -47,9 +47,9 @@
     </div>
     <br><br>
     <h1>Picnic (Christmas Celebration)</h1>
-    <p>Date: 29th December 2018 (Saturday)
+    <p>Date: 30th December 2018 (Sunday)
     <br>
-      Venue: Further consideration
+      Venue: Delta School of Nursing and TTDC Boathouse
     <br>
       Breakfast, Lunch and dinner included (Separate amount to be collected)
     </p>
